-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.0-rc1
-
OSX 10.8.5, QC 3.3 RC based on Qt5.4
Steps to reproduce:
- create an application from template or add a C++ class to a given project
- use .H as extension for the header and .cc for the extension of the source
- open the header file (to have it opened at least once)
- open the source file and trigger 'Switch between Header and Source'
Current result:
- QC opens the respective header but the header is now displayed with a .h extension (lower-case instead of upper-case) inside the 'Open Documents' view
- the navigation view (Projects) still displays the doc with .H extension
- changing the .h file triggers a message box of 'XYZ.H has changed outside QC...'
Note: I've checked the directory and there's only the XYZ.H created.
Additional note: Not sure if related: using .CC instead of .cc for the source does not trigger the 'Switch Header/Source' at all (on all platforms) but behaves similar to the above result - it "switches" to the same source file but now listed with lower-case extension. (on Linux nothing happens at all)
For Gerrit Dashboard: QTCREATORBUG-13507 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
123449,2 | OS X: Make file system be handled as case insensitive by default | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
123450,3 | Provide a way to override file name case sensitivity. | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
123452,3 | OS X: Provide a setting for file system case sensitivity in preferences | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
124865,5 | Normalize file paths on OS X | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |