OS X: Make file system be handled as case insensitive by default

Task-number: QTCREATORBUG-13507
Change-Id: Ia524950646ae1ff9d177876728c306b2bb909215
Reviewed-by: Jake Petroules <jake.petroules@petroules.com>